[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
known_third_party = ["locust"]
profile = "black"

[tool.poetry]
authors = []
description = "Basic load testing for Palace API"
name = "palace-api-load-test"
readme = "README.md"
version = "0"

[tool.poetry.dependencies]
locust = "^2.12.1"
python = ">=3.8,<4"

[tool.poetry.group.ci.dependencies]
pre-commit = "^3.2"

[tool.tomlsort]
ignore_case = true
in_place = true
sort_inline_arrays = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
